<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>Ros2 Package to launch the Nodes.</description>
  <maintainer email="deepakkhokhar1313@gmail.com">deepak</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>arm_genesis_simulation</depend>
  <depend>visualizer</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
